# new_job_project

./: .coverage  .env.example  .gitignore  CHANGELOG.md  DEPLOYMENT.md  Dockerfile  README.md  apply_day6.sh  docker-compose.yml  pyproject.toml  render.yaml  requirements.txt  workflow.db  workflow.db.bak  write_day5_files.py
.claude/: settings.local.json
.github/workflows/: ci.yml
app/: __init__.py  config.py  database.py  main.py
app/api/: __init__.py  records.py
docs/: runbook.md
tests/: test_observability.py  test_records_integration.py  test_reporting.py  test_security.py
workflow_service/: .gitignore  README.md  __init__.py  alembic.ini  requirements.txt
workflow_service/alembic/: env.py
workflow_service/alembic/versions/: c07bf775d3c2_initial_schema_with_records_table.py
workflow_service/app/: config.py  database.py  exceptions.py  main.py
workflow_service/app/api/: __init__.py  health.py  init.py  records.py  reports.py
workflow_service/app/core/: __init__.py  security.py
workflow_service/app/models/: __init__.py  record.py
workflow_service/app/schemas/: error.py  record.py
workflow_service/app/services/: processing.py  reporting.py
workflow_service/app/utils/: logging.py
workflow_service/tests/: test_errors.py  test_processing.py  test_reporting.py
