[project]
name = "workflow_service"
version = "0.1.0"
description = "Production-ready workflow service with state transitions and idempotency"
requires-python = ">=3.10"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4", # flake8-comprehensions
    "UP", # pyupgrade
]
ignore = [
    "E501", # line too long (handled by formatter)
    "B008", # function call in argument defaults (FastAPI Depends pattern is safe)
]

[tool.ruff.lint.isort]
known-first-party = ["workflow_service"]

[tool.black]
line-length = 100
target-version = ["py310"]
include = '\.pyi?$'

[tool.pytest.ini_options]
testpaths = ["tests", "workflow_service/tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "-v --tb=short"
